# weather

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example_response.json  imgui.ini  pom.xml  run.sh  test.sh  tinyinstallj.json  yacpm.json
scripts/: build.bat  build.sh  run.bat  run.sh
src/: WeatherService.cpp  WeatherService.hpp  main.cpp
src/main/java/com/thatcoolcoder/common/: Utils.java
src/main/java/com/thatcoolcoder/weather/: Main.java  WeatherService.java
src/main/java/com/thatcoolcoder/weather/common/: CallbackWithValue.java  Hyperlink.java  OS.java  PromptTextField.java  Subscribable.java  Utils.java
src/main/java/com/thatcoolcoder/weather/weatherApi/: WeatherService.java
src/main/java/com/thatcoolcoder/weather/weatherApi/exceptions/: InvalidApiKey.java  InvalidApiKeyException.java  InvalidLocation.java  InvalidLocationException.java  InvalidResponse.java  InvalidResponseException.java  NoLocationProvided.java  (+1 more)
src/main/java/com/thatcoolcoder/weather/weatherApp/: Actions.java  Config.java  Fonts.java  Main.java  SettingsPopup.java  TopBar.java  UIUtils.java  WeatherApiLink.java  WeatherApp.java  WeatherDisplayPanel.java
src/main/java/com/thatcoolcoder/weatherApi/: WeatherService.java
src/main/java/com/thatcoolcoder/weatherApi/models/: WeatherMetadata.java  WeatherSnapshot.java
src/main/java/com/thatcoolcoder/weatherApp/: Main.java  WeatherApp.java
src/test/java/com/thatcoolcoder/app/: AppTest.java
yacpkgs/: packages.cmake
yacpkgs/glad/: CMakeLists.txt  yacpkg.json
yacpkgs/glfw/: yacpkg.json
yacpkgs/imgui/: yacpkg.json
(+10 files in other folders)
